<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/white"
    android:id="@+id/layoutLogin"
    android:transitionName="transition_login"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <ImageView
            android:id="@+id/img_login_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="backFromLogin"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintittle"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:layout_marginTop="30dp"
            android:textAllCaps="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_login_TenDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_username"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/black"
                android:textColorHint="@color/black"
                app:endIconTint="@color/black"
                app:endIconMode="clear_text"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_login_MatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="4dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/black"
                app:endIconTint="@color/black"
                app:endIconMode="password_toggle"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <CheckBox
                android:id="@+id/cb_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="@string/luumatkhau"
                android:buttonTint="@color/black"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quenmatkhau"
                android:background="@color/white"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login_DangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/caffe"
            android:text="@string/login" />

        <Button
            android:id="@+id/btn_login_DangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="Đăng ký"
            android:textColor="@color/black"
            android:onClick="callRegisterFromLogin"
            />
    </LinearLayout>
</ScrollView>